# fmpl

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  DEMO.md  DEV.md  FIXES.md  PROMPT.md  README.md  TUTORIAL.md  fmpl.ebnf  project.md  ralph-analyze.py  ralph-compact.py  ralph.sh  send_more_money.fmpl  test-chat-history.fmpl
.agent/: events.jsonl  scratchpad.md  summary.md
.cargo/: config.toml
.claude/: .ralph-state.json  settings.json
.claude/hooks/: ralph-gate.py  ralph-preflight.py  ralph-transition.py
.claude/rlm_state/: state.pkl
.github/: copilot-instructions.md
benches/: Cargo.toml  pattern_matching.rs  simple_comparison.rs
demo/: README.md  harness.py  tavern.fmpl  transcript-durable_tuplespace-recorded.txt  transcript-durable_tuplespace.txt  transcript-tavern-recorded.txt  transcript-tavern.txt  transcript-three_hashes-recorded.txt  transcript-three_hashes.txt  typescript-durable-tuplespace.bsd  typescript-tavern.bsd  typescript-three-hashes.bsd
demo/scenarios/: durable_tuplespace.yaml  tavern.yaml  three_hashes.yaml
docs/: fmpl-field-log.html  fmpl-rehab-log.html  fmpl-tour.html  index.html  known-gaps.md  pattern-matching-unified.md  prolog-style-backtracking.md  repl.html
docs/codebase/: persistence-patterns.md
docs/design/: builtin-registry.md  computable-value-model.md  host-extensibility-seam.md  language-guide.md  project-overview-draft.md  stream-computation.md
docs/plans/: 2025-12-19-fmpl-revival-design.md  2025-12-19-phase1-repl.md  2026-01-19-apply-operator-implementation-plan.md  2026-01-20-async-await-spawn-design.md  2026-01-20-async-await-spawn-implementation.md  2026-01-20-parse-state-serialization-implementation-plan.md  2026-01-20-streaming-grammar-push-model-implementation-plan.md  2026-01-24-stream-observability-design.md  2026-01-29-scannerless-fmpl-parser.md  2026-02-04-unify-grammar-pattern-ir.md  2026-02-26-feature-complete-generated-grammar-design.md  2026-02-26-stream-based-grammar-design.md  (+3 more)
examples/: llm-agentic-loop.fmpl
fmpl-bootstrap/: Cargo.toml
fmpl-cli/: Cargo.toml
fmpl-cli/src/: main.rs
fmpl-cli/tests/: async_repl.rs  repl_commands.rs
fmpl-core/: Cargo.toml  build.rs
fmpl-core/src/: ast.rs  compiler.rs  debug.rs  error.rs  ir_builder.rs  json.rs  lexer.rs  lib.rs  object.rs  parse_stream.rs  parser.rs  parser_epoch.rs  repr.rs  types.rs  value.rs  value_to_ast.rs  vm.rs  vm_version.rs
fmpl-core/src/builtins/: ast.rs  grammar_to_ir.rs  ir.rs  ir_to_rust.rs  mod.rs  sse.rs  time.rs
fmpl-core/src/builtins/codegen/: context.rs
fmpl-core/src/bytecode/: format.rs
fmpl-core/src/diagnostics/: mod.rs
fmpl-core/src/grammar/: driver.rs  incremental.rs  mod.rs  optimizer.rs  parser.rs  runtime.rs  stream_input.rs  trampoline.rs
fmpl-core/src/instructions/: arithmetic.rs  control_flow.rs  dispatch.rs  functions.rs  macros.rs  mod.rs  objects.rs
fmpl-core/src/pattern/: mod.rs
fmpl-core/src/persistence/: envelope.rs  mod.rs
fmpl-core/src/tuplespace/: mod.rs  store.rs  stream.rs
fmpl-core/src/vm_internal/: frame.rs  mod.rs  parse_state.rs
fmpl-core/tests/: apply_operator.rs  assignment.rs  ast_to_ir_parity.rs  async_curl.rs  backtracking.rs  bcom_parse.rs  bootstrap_determinism.rs  bytecode_persistence.rs  canonical_pipeline_parity.rs  constructor_invocation.rs  context_aware_compilation.rs  core_prelude.rs  cursor_cow.rs  diagnostics_fmpl_source_scan.rs  doc_examples.rs  durable_tuplespace_round_trip.rs  facet_enforcement.rs  fmpl_interpreter.rs  fmpl_runner.rs  generated_parser_correctness.rs  grammar_optimizer.rs  guard_backtracking.rs  integration_pattern_unification.rs  integration_polymorphic_streams.rs  map_after_let.rs  metaprogramming.rs  new_constructor.rs  no_legacy_fmpl_syntax.baseline.json  no_legacy_fmpl_syntax.rs  object_persistence.rs  opcode_rename_evidence.rs  optimizer_integration.rs  parse_state_persistence.rs  parser_equivalence.rs  pattern_matching_match.rs  pattern_unification.rs  persistence_envelope_invariant.rs  persistence_schema_anti_rot.rs  postlude_arm_contract.rs  rand_builtin.rs  (+22 more)
fmpl-core/tests/common/: comment_strip.rs  mod.rs  rust_string_scanner.rs
fmpl-core/tests/fmpl/: apply_operator.fmpl  ast_to_ir.fmpl  fmpl_grammar.fmpl  fmpl_parser.fmpl
fmpl-core/tests/steps/: grep_invariant.rs  mod.rs  parse_rejection.rs  parse_success.rs
fmpl-persistence/: Cargo.toml
fmpl-persistence/examples/: source_handoff.rs
fmpl-persistence/src/: checksum.rs  envelope.rs  fjall_backend.rs  hash_compute.rs  lib.rs  loader.rs  recovery.rs  schema.rs  source_store.rs  store.rs
fmpl-persistence/tests/: bytecode_persistence.rs  fjall_store_is_empty.rs  iter_store.rs  object_persistence.rs  parse_state_persistence.rs  persistence_schema_format_anti_rot.rs  recover_and_rebind_unit.rs  scenario_0099_envelope_loader.rs  scenario_0100_content_addressed_source.rs  scenario_0101_eval_persist.rs  scenario_0102_recover_incompatible.rs  scenario_0111_envelope_writer_roundtrip.rs  scenario_0112_operator_detection.rs  source_store.rs  stream_input_store.rs
fmpl-scenario-runner/: Cargo.toml
fmpl-tui/: Cargo.toml  README.md
fmpl-tui/src/: main.rs
fmpl-types/: Cargo.toml
fmpl-types/src/: hash.rs  lib.rs  vm_version.rs
fmpl-wasm/: Cargo.toml
fmpl-wasm/src/: lib.rs
fmpl-web/: Cargo.toml
fmpl-web/seed/: seed.fmpl
fmpl-web/src/: continuations.rs  image_store.rs  lib.rs  main.rs  storylet.rs
fmpl-web/tests/: continuations.rs  seed_loader.rs  storylet_http.rs
fmpl-workspace-tests/: Cargo.toml
fmpl-workspace-tests/tests/: no_fjall_in_consumers.rs
lib/: anthropic.fmpl  compaction.fmpl  llm-common.fmpl  ollama.fmpl
specs/: 12-factor-agents.md  README.md  ROADMAP.md  async-streams.md  backtracking-csp.md  backtracking-opt-in-marker.md  csp-solving-status.md  fmpl-cli.md  fmpl-core.md  fmpl-web.md  grammar-optimizer.md  grammar-system.md  in-operator.md  lib.md  llm-tool-calling.md  object-system.md  parse-stream.md  parser-limitations.md  pattern-matching.md  persistence.md  reviewed-files.md  streaming-grammar.md  tuplespace.md  type-system.md  vm.md
(+114 files in other folders)
