[workspace]
resolver = "2"
members = ["fmpl-core", "fmpl-cli", "fmpl-web"]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["ndn"]
license = "MIT"
repository = "https://github.com/ndn/fmpl"

[workspace.dependencies]
# Core dependencies
logos = "0.15"
thiserror = "2.0"
smol_str = "0.3"

# CLI dependencies
rustyline = "15.0"

# Web dependencies
axum = "0.8"
tokio = { version = "1.42", features = ["full"] }
tower-http = { version = "0.6", features = ["fs", "cors"] }

# Shared
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
