[package]
name = "fmpl-benches"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish = false

[dependencies]
criterion = "0.5"
fmpl-core = { path = "../fmpl-core" }

[dependencies.execution_tape]
path = "../../execution/execution_tape"

# Disabled: vm_comparison.rs has API compatibility issues with execution_tape
# [[bin]]
# name = "vm_comparison"
# path = "vm_comparison.rs"

[[bin]]
name = "quick_comparison"
path = "quick_comparison.rs"

[[bin]]
name = "fmpl_only"
path = "fmpl_only.rs"

[[bin]]
name = "simple_comparison"
path = "simple_comparison.rs"

# Disabled: cross_compile_bench.rs has API compatibility issues with execution_tape
# [[bin]]
# name = "cross_compile_bench"
# path = "cross_compile_bench.rs"

# Disabled: vm_comparison.rs has API compatibility issues with execution_tape
# [[bench]]
# name = "vm_comparison"
# path = "vm_comparison.rs"
# harness = false

[[bench]]
name = "pattern_matching"
path = "pattern_matching.rs"
harness = false
