[package]
name = "fmpl-bootstrap"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Minimal FMPL interpreter for bootstrapping the parser generator"

[[bin]]
name = "fmpl-bootstrap"
path = "src/main.rs"

[dependencies]
fmpl-core = { workspace = true }
