[package]
name = "fmpl-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "FMPL command-line REPL"

[[bin]]
name = "fmpl"
path = "src/main.rs"

[dependencies]
fmpl-core = { path = "../fmpl-core" }
rustyline = { workspace = true }
dirs = "5.0"
