[package]
name = "fmpl-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "FMPL command-line REPL"

[[bin]]
name = "fmpl"
path = "src/main.rs"

[dependencies]
fmpl-core = { workspace = true }
rustyline = { workspace = true }
dirs = { workspace = true }
# tokio: previously `workspace = true` with implicit full features.
# After Task #21 the workspace pin has NO default features; declare
# what the CLI's runtime actually needs.
tokio = { workspace = true, features = ["full"] }
