[package]
name = "fmpl-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "FMPL language core: lexer, parser, compiler, and VM"

[features]
default = []
# Use trampolined grammar evaluation for bounded stack usage
trampolined-grammar = []
# Cross-compilation to the external `execution_tape` VM. That crate is not part
# of this repo, so the dependency below is commented out and this feature is
# dormant (declared so `#[cfg(feature = "cross_compile")]` stays warning-free).
# To re-enable: vendor `execution_tape`, uncomment the dependency, and set this
# to `cross_compile = ["execution_tape"]`.
cross_compile = []
# Enable Fjall-backed persistence for objects, bytecode, and grammars
fjall-persistence = []

[dependencies]
curl = "0.4"
# execution_tape = { optional = true, path = "../../execution/execution_tape", package = "execution_tape" }  # external crate; see the `cross_compile` feature above
fjall = "3"
logos = { workspace = true }
rand = "0.8"
rkyv = { workspace = true }
serde = { workspace = true }
serde_json = "1.0"
smol_str = { workspace = true }
stacker = "0.1"
thiserror = { workspace = true }
tokio = { version = "1", features = ["sync", "rt", "rt-multi-thread", "time"] }
zerocopy = { version = "0.8", features = ["derive"] }
blake3 = "1"

[dev-dependencies]
fmpl-scenario-runner = { path = "../fmpl-scenario-runner" }
inventory = "0.3"
pretty_assertions = "1.4"
serde_json = "1.0"
syn = { version = "2", features = ["full", "extra-traits", "visit"] }
tokio = { version = "1", features = ["full", "test-util"] }
wiremock = "0.6"
tempfile = "3"

[build-dependencies]
fmpl-scenario-runner = { path = "../fmpl-scenario-runner" }
