[package]
name = "fmpl-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "FMPL language core: lexer, parser, compiler, and VM"

[features]
default = ["curl-builtin"]
# HTTP builtins (curl.get / curl.post) via libcurl C bindings. On by default;
# inert on wasm32 (the dep is native-only, so the builtin reports itself
# unavailable at runtime there even with the feature on).
curl-builtin = ["dep:curl"]
# Use trampolined grammar evaluation for bounded stack usage
trampolined-grammar = []
# Cross-compilation to the external `execution_tape` VM. That crate is not part
# of this repo, so the dependency below is commented out and this feature is
# dormant (declared so `#[cfg(feature = "cross_compile")]` stays warning-free).
# To re-enable: vendor `execution_tape`, uncomment the dependency, and set this
# to `cross_compile = ["execution_tape"]`.
cross_compile = []
# Activate the fjall-backed Store impl in fmpl-persistence. Without this
# feature, fmpl-core still compiles against the Store trait; runtime use
# requires the caller to supply a Store impl (production callers pass
# FjallStore which depends on this feature).
# Renamed from fjall-persistence in ITER-0005a.5 (T4.9): the storage
# backend is an implementation detail and no longer named in fmpl-core.
persistence = ["fmpl-persistence/fjall-backend"]

[dependencies]
# execution_tape = { optional = true, path = "../../execution/execution_tape", package = "execution_tape" }  # external crate; see the `cross_compile` feature above
fmpl-persistence = { workspace = true }
fmpl-types = { workspace = true }
logos = { workspace = true }
rand = { workspace = true }
rkyv = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
smol_str = { workspace = true }
thiserror = { workspace = true }
zerocopy = { workspace = true }
blake3 = { workspace = true }

# Native-only: curl binds C libcurl; stacker needs real stacks; tokio's
# rt-multi-thread needs OS threads. Code touching these is gated on
# `not(target_arch = "wasm32")`. fmpl-core names no fjall in its regular
# deps (the Store trait keeps the backend in fmpl-persistence) — enforced
# by the no_fjall_in_fmpl_core ratchet in tests/.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
curl = { version = "0.4", optional = true }
stacker = "0.1"
tokio = { version = "1", features = ["sync", "rt", "rt-multi-thread", "time"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { version = "1", features = ["sync", "rt", "time"] }
# rand's getrandom backend needs the `js` feature to compile for
# wasm32-unknown-unknown (browser crypto.getRandomValues).
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
fmpl-persistence = { workspace = true, features = ["fjall-backend"] }
fmpl-scenario-runner = { workspace = true }
inventory = { workspace = true }
pretty_assertions = { workspace = true }
serde_json = { workspace = true }
syn = { workspace = true }
tokio = { workspace = true, features = ["full", "test-util"] }
wiremock = { workspace = true }
tempfile = { workspace = true }
# fjall v3 direct pin: integration tests probe FjallStore semantics
# directly (matches fmpl-persistence). Production fmpl-core code names
# no fjall at all — enforced by the no_fjall_in_fmpl_core ratchet at
# tests/persistence_envelope_invariant.rs (the in-crate gate;
# 0005a.6 T5 added a workspace-wide cross-consumer gate).
fjall = "3"

[build-dependencies]
fmpl-scenario-runner = { workspace = true }
