[package]
name = "fmpl-types"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "FMPL shared cross-crate types: VmVersion, Hash, SourceHash"

[dependencies]
serde = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
