[package]
name = "fmpl-web"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "FMPL web-based REPL with htmx"

[[bin]]
name = "fmpl-web"
path = "src/main.rs"

[dependencies]
fmpl-core = { path = "../fmpl-core" }
axum = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
fjall = { workspace = true }
blake3 = { workspace = true }
base64 = "0.22"
tower = { workspace = true }
tower-sessions = "0.15"
uuid = { version = "1.0", features = ["v4"] }
