[package]
name = "fmpl-web"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "FMPL web-based REPL with htmx"

[[bin]]
name = "fmpl-web"
path = "src/main.rs"

[dependencies]
fmpl-core = { workspace = true }
fmpl-persistence = { workspace = true, features = ["fjall-backend"] }
axum = { workspace = true }
# tokio needs full features for axum's runtime + the existing fmpl-web
# code paths (mpsc, signal-handling). Workspace pin = no-features per
# Task #21; each consumer opts in.
tokio = { workspace = true, features = ["full"] }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
blake3 = { workspace = true }
base64 = { workspace = true }
tower = { workspace = true }
tower-sessions = { workspace = true }
uuid = { workspace = true }
smol_str = { workspace = true }
